--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,61 @@
     
 }
 
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+.titulo {
+    font-weight: 700;
+}
+
+.container-fluid a {
+    color:black;
+    text-decoration: none;
+}
+
+.container-fluid a:hover {
+    color:aliceblue;
+    opacity: 0.5; 
+    transition: opacity 0.3s ease; 
+
+}
+
+
+.icone {
+    color: white; 
+    font-size: 24px; 
+    display: inline-block;
+    vertical-align: middle; 
+    padding: 16px;
+    transition: background 0.2s;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
+
+
+.footer_container {
+    text-align: center;
+}
+
+.footer_container a {
+    color: black; 
+    text-decoration: none; 
+    margin-top: 20px;
+    
+}
+
+.footer_container a:hover {
+    opacity: 0.5; 
+    transition: opacity 0.3s ease; 
+}
+
+
+/*
 body {
     display: flex;
     flex-direction: column;
@@ -16,7 +71,9 @@ body {
     background-color: #fff;
     border: 1px solid black;
 }
+*/
 
+/*
 header {
     background-color: #adadad;
     width: 360px;
@@ -49,35 +106,25 @@ header {
 }
 
 .opcao a:hover {
-    opacity: 0.5; /* Opacidade inicial */
-    transition: opacity 0.3s ease;  
-}
+    opacity: 0.5; 
+    /*transition: opacity 0.3s ease;  
+}*/
 
 
-
+/*
 .circle {
-    width: 50px; /* Defina o tamanho do círculo */
-    height: 50px; /* Defina o tamanho do círculo */
-    border-radius: 50%; /* Crie um círculo com o mesmo raio que a metade do tamanho do círculo */
-    background-color: #fff; /* Cor de fundo do círculo */
-    display: inline-block; /* Exibe o círculo como um elemento em linha */
-    vertical-align: middle; /* Alinha verticalmente com o texto */
+    width: 50px; 
+    height: 50px; 
+    border-radius: 50%; 
+    background-color: #fff; 
+    display: inline-block; 
+    vertical-align: middle; 
     margin-right: 10px;
     text-align: center;
     
 }
 
 
-  /* Estilos para o ícone */
-.icone {
-    color: white; /* Cor do ícone */
-    font-size: 24px; /* Tamanho do ícone */
-    display: inline-block; /* Exibe o ícone como um elemento em linha */
-    vertical-align: middle; /* Alinha verticalmente com o texto */
-    padding: 16px;
-    transition: background 0.2s;
-    border-radius: 50%;
-}
 
 .footer_container a {
     color: black; 
@@ -87,6 +134,6 @@ header {
 
 .footer_container a:hover {
     opacity: 0.5; /* Opacidade inicial */
-    transition: opacity 0.3s ease; 
+    /*transition: opacity 0.3s ease; 
 }
 
