--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
     
@@ -25,6 +26,22 @@ a {
 
 }
 
+.opcao {
+    margin-bottom: 12px;
+    margin-top: 12px;
+    width: 360px;
+    height: 64px;
+    max-width: 100%;
+}
+
+header {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+
+} 
 
 .icone {
     color: white; 
@@ -34,21 +51,15 @@ a {
     padding: 16px;
     transition: background 0.2s;
     border-radius: 50%;
-    display: block;
+    display: flex;
     margin: 0 auto;
     max-width: 100%;
 }
 
 
-.footer_container {
-    text-align: center;
-}
-
 .footer_container a {
     color: black; 
     text-decoration: none; 
-    margin-top: 20px;
-    
 }
 
 .footer_container a:hover {
@@ -57,83 +68,5 @@ a {
 }
 
 
-/*
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 640px;
-    width: 360px;
-    margin: 0px;
-    font-family: Arial, sans-serif;
-    position: relative;
-    background-color: #fff;
-    border: 1px solid black;
-}
-*/
 
-/*
-header {
-    background-color: #adadad;
-    width: 360px;
-    height: 64px;
-    margin-top: 15px;
-    margin-bottom: 100px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-
-} 
-
-
-.opcao {
-    background-color: #CBCBCB;
-    margin-bottom: 12px;
-    margin-top: 12px;
-    width: 360px;
-    height: 64px;
-}
-
-.opcao a {
-    color: black; 
-    text-decoration: none; 
-    align-items: center;
-    justify-content: center;
-    display: block;
-    
-    
-}
-
-.opcao a:hover {
-    opacity: 0.5; 
-    /*transition: opacity 0.3s ease;  
-}*/
-
-
-/*
-.circle {
-    width: 50px; 
-    height: 50px; 
-    border-radius: 50%; 
-    background-color: #fff; 
-    display: inline-block; 
-    vertical-align: middle; 
-    margin-right: 10px;
-    text-align: center;
-    
-}
-
-
-
-.footer_container a {
-    color: black; 
-    text-decoration: none; 
-    margin-top: 20px;
-}
-
-.footer_container a:hover {
-    opacity: 0.5; /* Opacidade inicial */
-    /*transition: opacity 0.3s ease; 
-}
 
